<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.amg.instabugtask.views.MainActivity">

    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_search"
        android:title="@string/action_search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_sort"
        android:icon="@drawable/ic_sort"
        android:title="@string/action_sort"
        app:showAsAction="ifRoom">
        <menu>
            <item
                android:id="@+id/action_sort_desc"
                android:title="@string/action_sort_ascending" />

            <item
                android:id="@+id/action_sort_asc"
                android:title="@string/action_sort_descending" />

            <item
                android:id="@+id/action_sort_default"
                android:title="@string/action_sort_default" />
        </menu>

    </item>
</menu>